Bug 1968598 [Wayland] Don't get HDR info from particular monitors r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D252805